<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="#c0c0c0"
                android:id="@+id/naslovnaStr"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <Button
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:id="@+id/dNadjiSliku"
                android:text="@string/dNadjiSliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:paddingTop="10dp"
            android:hint="@string/helpImeAutora"
            android:id="@+id/imeAutora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:paddingTop="10dp"
            android:id="@+id/nazivKnjige"
            android:hint="@string/helpNazivKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:paddingTop="10dp"
            android:id="@+id/sKategorijaKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/kategorije"
            />

        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:text="@string/dUpisiKnjigu"
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/dPonisiti"
                android:id="@+id/dPonisti"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>