<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/LinearLayout"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eNaslovna"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:focusable="false"
            android:id="@+id/dPreporuci"
            android:textSize="12sp"
            android:text="@string/dPreporuci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eNaziv"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eDatumObjavljivanja"
            android:text="@string/eDatumObjavljivanja"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eBrojStranica"
            android:text="@string/eBrojStranica"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eOpis"
            android:text="@string/eOpis"
            android:paddingTop="10dp"/>
    </LinearLayout>

</LinearLayout>